--- a/CSS-MySite/css/style.css
+++ b/CSS-MySite/css/style.css
@@ -1,4 +1,5 @@
 body {
+    color: #40514E;
     margin: 0;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -8,12 +9,32 @@ body {
 h1 {
     margin-top: 0;
     font-family: 'Sacramento', cursive;
-    font-size: 90px;
+    font-size: 5.6rem;
+    color: #66BFBF;
+    line-height: 2;
 }
+
+h3, a {
+    color: #11999E;
+}
+
+h2 {
+    color: #66BFBF;
+    font-weight: normal;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    padding-bottom: 10px ;
+}
+
 p {
     font-family: 'Merriweather', serif;
 }
 
+hr {
+    border-top: 7px dotted #d7d2d2;
+    width: 4%;
+    margin: 80px auto;
+}
 .top-container {
     background-color: #e4f9f5;
     position: relative;
@@ -30,3 +51,101 @@ p {
     position: absolute;
     left: 300px;
 }
+
+.middle-container {
+    margin: 100px 0;
+}
+.profile-img {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+}
+
+.intro {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.skill-row {
+    width: 50%;
+    margin: 60px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.code-img {
+    border-radius: 50%;
+    float: left;
+    margin-right: 30px;
+}
+
+.chilli-img {
+    float: right;
+    margin-left: 30;
+}
+
+.skill-row img {
+    width: 25%;
+}
+
+.contact-me{
+    width: 50%;
+    margin: 0 auto;
+    line-height: 2;
+    margin-bottom: 70px;
+  }
+
+  .bottom-container {
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
+  }
+
+  a {
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+    font-weight: bold;
+    transition: 0.2s ease;
+  }
+
+  a:hover {
+    color: #e4f9f5;
+    text-decoration: underline;
+    
+  }
+
+  .bottom-container p {
+    color: #EAF6F6;
+    padding: 20px 0;
+  }
+
+  .links {
+
+  }
+
+.btn {
+    background:  #11cdd4;
+    background-image: -webkit-linear-gradient(top,  #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top,  #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top,  #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top,  #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom,  #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
